--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run dev -- --watch",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "development": "NODE_ENV=development mix",
+    "dev": "npm run development",
+    "watch": "npm run development -- watch",
+    "production": "NODE_ENV=production mix --production",
+    "prod": "npm run production"
   },
   "dependencies": {
-    "@tailwindcss/ui": "^0.2.2",
-    "alpinejs": "^2.3.1",
-    "tailwindcss": "^1.3.5"
+    "alpinejs": "^3.13.5",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "^5.1.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "@chiiya/laravel-mix-imagemin": "^1.1.0",
+    "browser-sync": "^3.0.2",
+    "browser-sync-webpack-plugin": "github:Va1/browser-sync-webpack-plugin#pull/96/head",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "filename-regex": "^2.0.1",
     "imagemin-webpack-plugin": "^2.4.2",
-    "laravel-mix": "^5.0.4",
-    "laravel-mix-imagemin": "^1.0.3",
-    "mix-html-builder": "^0.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "laravel-mix": "^6.0.49",
+    "mix-html-builder": "^0.9.1"
   }
 }
